--- a/cloudmusic/src/routes/discover/dayrecommend.scss
+++ b/cloudmusic/src/routes/discover/dayrecommend.scss
@@ -31,4 +31,32 @@
         border-bottom:1px solid #ccc;
         color:#000;
     }
+    .playlist>li{
+        width:100%;
+        height:50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding:0 10px;
+        border-bottom:1px solid #ccc;
+        p:nth-of-type(1){
+            padding-top:5px;
+            position: relative;
+            padding-left:40px;
+            img{
+                width:30px;
+                height:30px;
+                position: absolute;
+                left:5px;
+                top:5px;
+            }
+            span{
+                display: inline-block;
+            }
+        }
+        img{
+            width:20px;
+            height:20px;
+        }
+    }
 }
