--- a/cloudmusic/src/routes/discover/seach.scss
+++ b/cloudmusic/src/routes/discover/seach.scss
@@ -6,12 +6,26 @@
         justify-content: space-between;
         align-items: center;
         padding:0 10px;
+        border-bottom:1px solid #ccc;
         input{
-            width:80%;
+            width:60%;
             border:1px solid #ccc;
             border-radius: 30px;
             padding-left:20px;
         }
+        button{
+            width:20%;
+            background: blue;
+            color:#fff;
+        }
+    }
+    .box{
+        width:100%;
+        height:40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding:0 10px;
     }
     .seachlist{
         width:100%;
